# overwatch

./: .env.example  .gitignore  AGENTS.md  AGENT_SETUP.md  README.md  install.sh  package-lock.json  package.json  skills-lock.json
docs/: README.md  insights.md
overwatch-mobile/: MIGRATION.md  app.config.ts  eas.json  index.ts  metro.config.js  (+4 more)
pipecat/: .gitignore  Dockerfile  README.md  bot.py  pcc-deploy.toml  pyproject.toml
pipecat/overwatch_pipeline/: bot.py  deferred_update_buffer.py  frames.py  harness_adapter_client.py  harness_bridge.py  harness_event_router.py  harness_router.py  idle_report.py  inference_gate.py  interruption_emitter.py  interruption_trace.py  pending_user_input_buffer.py  pipeline_factory.py  say_text_voice_guard.py  settings.py  stt_provider.py  tts_provider.py  typed_input_decoder.py  voices.py  xai_tts.py
pipecat/overwatch_pipeline/auth/: __init__.py  token_validator.py
pipecat/overwatch_pipeline/protocol/: __init__.py
pipecat/tests/: conftest.py
pipecat/tests/integration/: _harness.py  test_e2e_harness.py  test_history_and_compaction.py  test_interruption_scenarios.py  test_long_conversation.py  test_user_journeys.py  test_voice_loop_properties.py
pipecat/tests/integration/fixtures/voice_loop/: mid_stream_interrupt.json
pipecat/tests/unit/: test_deferred_buffer.py  test_harness_bridge.py  test_harness_event_router_dispatch.py  test_harness_router.py  test_inference_gate.py  test_interruption_emitter.py  test_protocol_models.py  test_stt_provider.py  test_token_validator.py  test_tts_provider.py  test_typed_input_decoder.py
(+174 files in other folders)
